Tue Aug 14 18:47:10 UTC 2007 / Arjen de Korte <arjen@de-korte.org>

 * drivers/snmp-ups.c:
   - Missing curly brackets.

Tue Aug 14 18:31:12 UTC 2007 / Arjen de Korte <arjen@de-korte.org>

 * drivers/usbhid-ups.c:
   - Helper function 'find_nut_info_valid' removed. We check for the
     validity of commands and variables during the initialisation, so
     this doesn't need to be repeated when we run instcmd() or
     setvar(), so they can both use 'find_nut_info'.

Mon Aug 13 21:35:13 UTC 2007 / Arjen de Korte <arjen@de-korte.org>

 * drivers/mge-hid.c:
   - Variables that can be changed need to have 'HU_FLAG_SEMI_STATIC'.

Mon Aug 13 19:53:12 UTC 2007 / Arjen de Korte <arjen@de-korte.org>

 * data/cmdvartab, docs/new-names.txt, docs/hid-subdrivers.txt:
   - Rename 'beeper.on' -> 'beeper.enable'
   - Rename 'beeper.off' -> 'beeper.disable'
   - Added 'beeper.mute'
 * drivers/*-hid.c:
   - Added the 'beeper.disable' command to all subdrivers, this may not
     work on al UPSes (it is described in the HID Power Devices document).
 * drivers/<various>:
   - Updated drivers with new names for 'beeper.{enable,disable,mute}'
     commands.
   - Applied a mapping from old to new commands, in order not to break
     existing installations. Mapped 'beeper.on' to 'beeper.enable' and
     'beeper.off' to 'beeper.disable' or 'beeper.mute', depending on
     the comments in the driver.
 * man/<various>:
   - Updated the man pages for drivers that described these commands.

Mon Aug 13 13:08:13 UTC 2007 / Alexander I. Gordeev <lasaine@lvk.cs.msu.su>

 * drivers/megatec_usb.c: added credits to the banner message.

Mon Aug 13 09:28:42 UTC 2007 / Arjen de Korte <arjen@de-korte.org>

 * data/cmdvartab, docs/new-names.txt:
   - Added a couple of variables that are used in MGE devices.
 * drivers/mge-hid.c:
   - Added 'input.voltage.extended' and 'input.frequency.extended'
     variables, that can be used to extend the input voltage and
     -frequency ranges that can be set.
